@@ -1,5 +1,10 @@
 2007-02-26  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimp-transform-region.c (normalize_coords): removed a
+	redundant condition and marked another one as unlikely.
+
+2007-02-26  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpimage-scale.c
 	* app/actions/image-commands.c: cosmetics.
 
